WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
151964
UIProcess should determine AppNap state for WebPage
https://bugs.webkit.org/show_bug.cgi?id=151964
Summary
UIProcess should determine AppNap state for WebPage
Gavin Barraclough
Reported
2015-12-07 14:00:38 PST
Step 1 in unifying this with the iOS process suppression mechanism is to move the decision out of the WebContent process.
Attachments
Fix
(9.45 KB, patch)
2015-12-07 14:28 PST
,
Gavin Barraclough
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2015-12-07 14:28:12 PST
Created
attachment 266814
[details]
Fix
WebKit Commit Bot
Comment 2
2015-12-07 14:29:17 PST
Attachment 266814
[details]
did not pass style-queue: ERROR: Source/WebKit2/WebProcess/WebPage/WebPage.h:994: The parameter name "started" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/UIProcess/WebPageProxy.h:423: The parameter name "activityState" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 2 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3
2015-12-07 14:31:20 PST
Comment on
attachment 266814
[details]
Fix r=me if you fix the stylebot warnings.
Gavin Barraclough
Comment 4
2015-12-07 15:00:16 PST
Transmitting file data ....... Committed revision 193655.
Ryan Haddad
Comment 5
2015-12-07 16:01:42 PST
This change seems to have caused the following LayoutTests to fail or time out on El Capitan WK2: media/media-fragments/TC0078.html media/media-fragments/TC0086.html media/media-fragments/TC0090.html media/video-aspect-ratio.html streams/pipe-to.html webgl/1.0.2/conformance/textures/texture-size-limit.html webgl/1.0.3/conformance/extensions/oes-texture-half-float-with-canvas.html <
https://build.webkit.org/results/Apple%20El%20Capitan%20Release%20WK2%20(Tests)/r193655%20(1711)/results.html
> <
https://build.webkit.org/results/Apple%20El%20Capitan%20Release%20WK2%20(Tests)/r193657%20(1712)/results.html
> <
https://build.webkit.org/builders/Apple%20El%20Capitan%20Release%20WK2%20%28Tests%29/builds/1713
>
WebKit Commit Bot
Comment 6
2015-12-07 16:20:39 PST
Re-opened since this is blocked by
bug 151970
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug